@@ -1,3 +1,8 @@
+2003-07-15  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* lib/Astro/Coords.pm: Add rise/set/transit time and definitions
+	of twilight.
+
 2003-03-12  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* lib/Astro/Coords.pm (calculate): Trap zero increment
